--- a/index.html
+++ b/index.html
@@ -11,22 +11,32 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
           crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
 </head>
 <body>
   <div class="navigation-bar">
     <div class="logo">
       <img class="nav-logo" src="img/logo.png">
     </div>
-    <div class="nav-links">
-      <a class="links" href="https://vk.com/insightbedrock">Мы в Vk</a>
-      <a class="links" href="https://discord.gg/cjERaz9s">Мы в Discord</a>
+
+    <header>
+      <div class="menu-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </header>
+
+    <div class="menu">
+      <nav class="text-center">
+        <li><a class="links" href="https://vk.com/insightbedrock">Мы в Vk</a></li>
+        <li><a class="links" href="https://discord.gg/cjERaz9s">Мы в Discord</a></li>
+      </nav>
     </div>
   </div>
 
     <div class="container mt-5">
       <div class="row">
-        <div class="col-xs-12 col-lg-6 text-center mb-5">
+        <div class="col-xs-12 col-lg-6 text-center">
           <p class="main-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
             when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -34,11 +44,12 @@
             It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
             with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
           </p>
-          <div class="text-center">
+          <div class="button">
             <button class="btn btn-secondary">Присоедниться</button>
           </div>
         </div>
-        <div class="col-xs-12 col-lg-6 text-center">
+
+        <div class="col-xs-12 col-lg-6 slider-container text-center">
           <div id="mySlider" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
               <li data-target="#mySlider" data-slide-to="0" class="active"></li>
@@ -65,24 +76,50 @@
           </div>
         </div>
       </div>
-    <div class="d-flex justify-content-between features-block">
-      <div>
-        1234
+    <div class="row features-block">
+      <div class="col-lg text-center">
+        <img class="icons" src="img/free-icon-home-88282.png">
+        <p>Без привату</p>
       </div>
-      <div>
-        1234
+      <div class="col-lg text-center">
+        <img class="icons" src="img/free-icon-tax-2091881.png">
+        <p>Без донату</p>
       </div>
-      <div>
-        1234
+      <div class="col-lg text-center">
+        <img class="icons" src="img/new.png">
+        <p>Найновіша версія Майнкрафту</p>
       </div>
-      <div>
-        1234
+      <div class="col-lg text-center">
+        <img class="icons" src="img/calendar.png" alt="">
+        <p>Івенти</p>
       </div>
-      <div>
-        1234
+      <div class="col-lg text-center">
+        <img class="icons" src="img/settings.png" alt="">
+        <p>Плагіни для приємної гри</p>
       </div>
     </div>
     </div>
+
+  <script>
+    let menuBtn = document.querySelector('.menu-btn');
+    let menu = document.querySelector('.menu');
+    let carousel = document.querySelector('.slider-container');
+    let menuMode = false;
+
+    menuBtn.addEventListener('click', () => {
+      menuBtn.classList.toggle('active');
+      menu.classList.toggle('active');
+
+      if(menuMode == false){
+        menuMode = true;
+        carousel.classList.toggle('hide');
+      }
+      else {
+        carousel.classList.toggle('show');
+        return false;
+      }
+    })
+  </script>
 </body>
 </html>
 
