--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <link href="css/main.css" rel="stylesheet" type="text/css">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-          crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-          crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-          crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="navigation-bar">
@@ -50,29 +45,26 @@
         </div>
 
         <div class="col-xs-12 col-lg-6 slider-container text-center">
-          <div id="mySlider" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#mySlider" data-slide-to="0" class="active"></li>
-              <li data-target="#mySlider" data-slide-to="1"></li>
-              <li data-target="#mySlider" data-slide-to="2"></li>
-            </ol>
+          <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/slider-img-1.png" alt="" class="d-block w-100">
+                <img src="img/slider-img-1.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="img/slider-img-2.png" alt="" class="d-block w-100">
+                <img src="img/slider-img-2.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="img/slider-img-3.png" alt="" class="d-block w-100">
+                <img src="img/slider-img-3.png" class="d-block w-100" alt="...">
               </div>
             </div>
-            <a href="#mySlider" class="carousel-control-prev" role="button" data-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            </a>
-            <a href="#mySlider" class="carousel-control-next" role="button" data-slide="next">
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselControls" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            </a>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
         </div>
       </div>
@@ -99,7 +91,6 @@
       </div>
     </div>
     </div>
-
   <script>
     let menuBtn = document.querySelector('.menu-btn');
     let menu = document.querySelector('.menu');
