1.Add horizontal lines for features block. 2. Made mobile layout for feature block 3. Add goods block. 4. Add footer.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="row">
         <div class="col-xs-12 col-lg-6 mb-3 mb-lg-0 text-center">
           <p class="main-text">
-            Insight - ванильный bedrock сервер, полностью построенный на доверии игроков <br>
+            Insight - ванильный bedrock сервер, полностью построенный на доверии игроков. <br>
             Посетите нашу страну со своей экономикой, системой политики и регулярными ивентами,
             и погрузитесь в невероятною атмосферу сервера.
           </p>
@@ -72,33 +72,94 @@
         </div>
       </div>
     <div class="row features-block">
-      <div class="col-lg text-center">
+      <hr>
+      <div class="col-12 col-sm-6 col-md-4 col-lg text-center">
         <img class="icons" src="img/free-icon-home-88282.png">
         <p>Без привату</p>
       </div>
-      <div class="col-lg text-center">
+      <div class="col-12 col-sm-6 col-md-4 col-lg text-center">
         <img class="icons" src="img/free-icon-tax-2091881.png">
         <p>Без донату</p>
       </div>
-      <div class="col-lg text-center">
+      <div class="col-12 col-sm-6 col-md-4 col-lg text-center">
         <img class="icons" src="img/new.png">
-        <p>Найновіша версія Майнкрафту</p>
+        <p>Версія 1.9.2</p>
       </div>
-      <div class="col-lg text-center">
-        <img class="icons" src="img/calendar.png" alt="">
-        <p>Івенти</p>
+      <div class="col-12 col-sm-6 col-md-6 col-lg mt-md-3 mt-lg-0 text-center">
+        <div class="padding-l">
+          <img class="icons" src="img/calendar.png" alt="">
+          <p>Івенти</p>
+        </div>
       </div>
-      <div class="col-lg text-center">
-        <img class="icons" src="img/settings.png" alt="">
-        <p>Плагіни для приємної гри</p>
+      <div class="col-12 col-md-6 col-lg mt-md-3 mt-lg-0 pl-5 text-center  text-nowrap">
+        <div class="padding-r">
+          <img class="icons " src="img/settings.png" alt="">
+          <p>Плагіни для приємної гри</p>
+        </div>
+      </div>
+      <hr>
+    </div>
+      <div class="goods">
+        <h1 class="goods-title text-center">
+          Препустки на наш сервер
+        </h1>
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-3 mt-4 mt-lg-0 text-center">
+            <img src="img/goods-img.png" alt="">
+            <p class="price"> 100 ₴</p>
+            <buttom class="btn btn-outline-success">Купити</buttom>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3 mt-4 mt-lg-0 text-center">
+            <img src="img/goods-img.png" alt="">
+            <p class="price">250 ₴</p>
+            <buttom class="btn btn-outline-success">Купити</buttom>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3 mt-4 mt-lg-0 text-center">
+            <img src="img/goods-img.png" alt="">
+            <p class="price">450 ₴</p>
+            <buttom class="btn btn-outline-success">Купити</buttom>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3 mt-4 mt-lg-0 text-center">
+            <img src="img/goods-img.png" alt="">
+            <p class="price">1200 ₴</p>
+            <buttom class="btn btn-outline-success">Купити</buttom>
+          </div> 
+        </div>
       </div>
     </div>
+
+    <div class="footer row">
+      <div class="col-12 col-lg">
+        <div class="footer-logo">
+          <div class="footer-logo-background">
+            <img class="footer-logo-img" src="img/mini-logo.png" alt="">
+          </div>
+          <p class="logo-text">INSIGHT</p>
+        </div>
+        <div>
+          <p class="copyright-text">Copyright &copy; Insight 2022. Всі права захищенні. Сервери Insight не відносяться до Mojang Studio</p>
+        </div>
+      </div>
+      <div class="col-12 col-lg-4">
+        <h1 class="footer-head">Документи</h1>
+        <div class="categories">
+          <p class="footer-links">Публічна оферта</p>
+          <p class="footer-links">Політика обробки пресональних данних</p>
+        </div>
+      </div>
+      <div class="col-12 col-lg-4">
+        <h1 class="footer-head">Звяжіться з нами</h1>
+        <div class="categories">
+          <p class="footer-links">insight@gmail.com</p>
+        </div>
+      </div>
     </div>
+  <div style="background-color: #15151b; height: 20px; border: none"></div>
+
   <script>
     let menuBtn = document.querySelector('.menu-btn');
     let menuBurger = document.querySelector('.menu-burger');
     let carousel = document.querySelector('.slider-container');
-    let menuMode = false;
 
     menuBtn.addEventListener('click', () => {
       menuBtn.classList.toggle('active');
