1.Fix footer width 2.Redesign goods block 3.Add payments logos in footer 4.Fix icon position in menu mode

--- a/index.html
+++ b/index.html
@@ -101,26 +101,34 @@
     </div>
       <div class="goods">
         <h1 class="goods-title text-center">
-          Препустки на наш сервер
+          Перепустки на наш сервер
         </h1>
-        <div class="row">
-          <div class="col-sm-12 col-md-6 col-lg-3 mt-4 mt-lg-0 text-center">
-            <img src="img/goods-img.png" alt="">
+        <div class="d-flex justify-content-evenly flex-wrap text-center">
+          <div class="section text-center">
+            <!--<img class="goods-img" src="img/good1.png" alt="">-->
+            <h1 class="bedrock">BEDROCK</h1>
+            <p class="pass-time">Пропуск на місяць</p>
             <p class="price"> 100 ₴</p>
             <buttom class="btn btn-outline-success">Купити</buttom>
           </div>
-          <div class="col-sm-12 col-md-6 col-lg-3 mt-4 mt-lg-0 text-center">
-            <img src="img/goods-img.png" alt="">
+          <div class="section text-center">
+            <!--<img class="goods-img" src="img/good1.png" alt="">-->
+            <h1 class="bedrock">BEDROCK</h1>
+            <p class="pass-time">Пропуск на 3 місяці</p>
             <p class="price">250 ₴</p>
             <buttom class="btn btn-outline-success">Купити</buttom>
           </div>
-          <div class="col-sm-12 col-md-6 col-lg-3 mt-4 mt-lg-0 text-center">
-            <img src="img/goods-img.png" alt="">
+          <div class="section text-center">
+            <!--<img class="goods-img" src="img/good1.png" alt="">-->
+            <h1 class="bedrock">BEDROCK</h1>
+            <p class="pass-time">Пропуск на 6 місяців</p>
             <p class="price">450 ₴</p>
             <buttom class="btn btn-outline-success">Купити</buttom>
           </div>
-          <div class="col-sm-12 col-md-6 col-lg-3 mt-4 mt-lg-0 text-center">
-            <img src="img/goods-img.png" alt="">
+          <div class="section  text-center">
+            <!--<img class="goods-img" src="img/good1.png" alt="">-->
+            <h1 class="bedrock">BEDROCK</h1>
+            <p class="pass-time">Довічний пропуск</p>
             <p class="price">1200 ₴</p>
             <buttom class="btn btn-outline-success">Купити</buttom>
           </div> 
@@ -152,10 +160,13 @@
         <div class="categories">
           <p class="footer-links">insight@gmail.com</p>
         </div>
+        <div class="payments">
+          <img class="payments-logo" src="img/mastercard.svg" alt="">
+          <img class="payments-logo" src="img/visa.svg" alt="">
+        </div>
       </div>
+      <div class="extra-height"></div>
     </div>
-  <div style="background-color: #15151b; height: 20px; border: none"></div>
-
   <script>
     let menuBtn = document.querySelector('.menu-btn');
     let menuBurger = document.querySelector('.menu-burger');
